Fixed dark mode bg

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@
 
 @layer components {
   .card {
-    @apply px-4 py-2 w-full rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-neutral-50 dark:border-neutral-700 dark:hover:bg-neutral-700;
+    @apply px-4 py-2 w-full rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-neutral-700 dark:border-neutral-700 dark:hover:bg-neutral-700;
   }
   .primary-text {
     @apply text-red-600 dark:text-red-400;
